cambio en nombre de autor

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <img src="./images/img1.webp" alt="portada del libro El Aleph" class="new_img">      
                         <div class="new_data">
                             <h3 class="new_title">El Aleph</h3>
-                            <span class="new_subtitle">Jorge Luis Borges</span>                   
+                            <span class="new_subtitle">Jorge Borges</span>                   
                         </div>           
                 </a>                     
                 <a href="./pages/detail.html?id=nov-040" class="new_card ">
