--- a/pages/store.html
+++ b/pages/store.html
@@ -229,13 +229,13 @@
                     <h3 class="footer_title">La Empresa</h3>
                     <ul class="footer_links">
                         <li>
-                            <a href="../pages/about_us.html" class="footer_link">Sobre Nosotros</a>
+                            <a href="./about_us.html" class="footer_link">Sobre Nosotros</a>
                         </li>
                         <li>
-                            <a href="../pages/privacy.html" class="footer_link">Políticas de Privacidad</a>
+                            <a href="./privacy.html" class="footer_link">Políticas de Privacidad</a>
                         </li>
                         <li>
-                            <a href="../pages/terms_conditions.html" class="footer_link">Términos y Condiciones</a>
+                            <a href="./terms_conditions.html" class="footer_link">Términos y Condiciones</a>
                         </li>
                     </ul>
                 </div > 
@@ -244,34 +244,34 @@
                     <h3 class="footer_title">Categorías</h3>
                     <ul class="footer_links">
                         <li>
-                            <a href="../pages/store.html?q=cat-cfi" class="footer_link">C. Ficción</a>
+                            <a href="./store.html?q=cat-cfi" class="footer_link">C. Ficción</a>
                         </li>
                         <li>
-                            <a href="../pages/store.html?q=cat-nov" class="footer_link">Novela</a>
-                        </li>
-
-                        <li>
-                            <a href="../pages/store.html?q=cat-inf" class="footer_link">Infantil</a>
+                            <a href="./store.html?q=cat-nov" class="footer_link">Novela</a>
                         </li>
 
                         <li>
-                            <a href="../pages/store.html?q=cat-rom" class="footer_link">Romántica</a>
+                            <a href="./store.html?q=cat-inf" class="footer_link">Infantil</a>
                         </li>
 
                         <li>
-                            <a href="../pages/store.html?q=cat-ter" class="footer_link">Terror</a>
+                            <a href="./store.html?q=cat-rom" class="footer_link">Romántica</a>
                         </li>
 
                         <li>
-                            <a href="../pages/store.html?q=cat-fan" class="footer_link">Fantasía</a>
+                            <a href="./store.html?q=cat-ter" class="footer_link">Terror</a>
                         </li>
 
                         <li>
-                            <a href="../pages/store.html?q=cat-bie" class="footer_link">Bienestar</a>
+                            <a href="./store.html?q=cat-fan" class="footer_link">Fantasía</a>
+                        </li>
+
+                        <li>
+                            <a href="./store.html?q=cat-bie" class="footer_link">Bienestar</a>
                         </li>     
 
                         <li>
-                            <a href="../pages/store.html?q=cat-coc" class="footer_link">Cocina</a>
+                            <a href="./store.html?q=cat-coc" class="footer_link">Cocina</a>
                         </li>         
                        
                     </ul>
@@ -283,11 +283,11 @@
                     </h3>
                     <ul class="footer_links">
                         
-                        <li><a href="../pages/pay_media.html" class="footer_link">Medios de Pago</a>
+                        <li><a href="./pay_media.html" class="footer_link">Medios de Pago</a>
                         </li>
-                        <li><a href="../pages/cost.html" class="footer_link">Costo de Envío</a>
+                        <li><a href="./cost.html" class="footer_link">Costo de Envío</a>
                         </li>
-                        <li><a href="../pages/frequent_questions.html" class="footer_link">Preguntas Frecuentes</a>
+                        <li><a href="./frequent_questions.html" class="footer_link">Preguntas Frecuentes</a>
                         </li>  
                     </ul>
                 </div > 
