Modificacion css formulario

--- a/pages/login.html
+++ b/pages/login.html
@@ -76,14 +76,14 @@
                  <div class="colp">
                  <a href="#" class="footer_link" style="color: black;">¿Has olvidado la contraseña?</a>
                  </div>
-                     <button class="ingresar" type="submit">Iniciar Sesión</button>
+                     <button type="submit" class="btn" id="btn_login">Iniciar Sesión</button>
                  <div class="resgistrarme">
-                      <p>¿No tienes cuenta?<a href="./registro.html" class="footer_link" style="color: black;">Registrarme</a>
-                     </p>   
+                      <p>¿No tienes cuenta?<a href="./registro.html" class="footer_link" style="color: black;">Registrarme</a></p>   
                  </div>                       
              </form>
-             </div>   
-
+             </div>  
+              
+        </div>
     </main>
     
     <footer class="footer">
@@ -180,6 +180,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="../js/main.js"></script>
     <script src="../js/cart.js"></script>
+    <script src="../js/inicioSesion.js"></script>
 
 
 </body>
