agregando administracion y manejo de usuario admin

--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                     <li class="nav_item">
                         <a href="index.html#contacto" class="nav_link sub-line">Contacto</a>
                     </li> 
-                  
+                    <li class="nav_item">
+                        <a href="./pages/administration.html" class="nav_link sub-line invisible">Administración</a>
+                    </li>
                 </ul>
             </div>
             <div class="nav_search">
