--- a/pages/login.html
+++ b/pages/login.html
@@ -47,7 +47,9 @@
                     <li class="nav_item">
                         <a href="../index.html#contacto" class="nav_link sub-line">Contacto</a>
                     </li> 
-                  
+                    <li id="page-admin" class="nav_item">
+                        <a href="./administration.html" class="nav_link sub-line">Administración</a>
+                    </li>
                 </ul>
             </div>
             <div class="nav_search">
@@ -66,11 +68,11 @@
              <form class="formulario_sesion" >
                  <h1 class="section_title">Inicia Sesión</h1>
                  <div class="colp">
-                     <input class="correo" type="text" placeholder="Correo">
+                     <input id="correo" name="correo" class="correo" type="text" placeholder="Correo">
                      <p class="falla"></p>
                  </div>
                  <div class="colp">
-                     <input class="contraseña" type="password" placeholder="Contraseña">
+                     <input id="password" name="password" class="contraseña" type="password" placeholder="Contraseña">
                      <p class="falla"></p>
                  </div>
                  <div class="colp">
