--- a/pages/detail.html
+++ b/pages/detail.html
@@ -52,7 +52,9 @@
                     <li class="nav_item">
                         <a href="../index.html#contacto" class="nav_link sub-line">Contacto</a>
                     </li> 
-                  
+                    <li class="nav_item">
+                        <a href="./administration.html" class="nav_link sub-line invisible">Administración</a>
+                    </li>
                 </ul>
             </div>
             <div class="nav_search">
