--- a/pages/administration.html
+++ b/pages/administration.html
@@ -61,24 +61,31 @@
         </nav>        
     </header>
     
-    <main>
+    <main>                 
+        <section class="btnClose"  id="container-btn">               
+            <button id="close-session" type="button">CERRAR SESIÓN</button>
+        </section>
+  
+        <h1 class="titlePage">Gestión de Libros</h1>
+
         <aside>
-            <form id="formBooks" method="post">
+            <form  class="formBooks"  id="formBooks" method="post">
+                <h2>Ingreso de Libros</h2>
                 <div class="camposForm">
                     <label for="codigo">Código:</label>
-                    <input id="codigo" name="codigo" type="text" placeholder="cod-000" required>
+                    <input class= "inputForm"   id="codigo" name="codigo" type="text" placeholder="cod-000" required>
                 </div>
                 <div class="camposForm">
-                    <label for="imagen">Foto:</label>
-                    <input id="imagen" name="imagen" type="url" placeholder="URL de la imagen" required>
+                    <label for="imagen">Imagen:</label>
+                    <input class= "inputForm"   id="imagen" name="imagen" type="url" placeholder="URL de la imagen" required>
                 </div>
                 <div class="camposForm">
                     <label for="nombre">Título:</label>
-                    <input id="nombre" name="nombre" type="text" placeholder="Título" required>
+                    <input class= "inputForm" id="nombre" name="nombre" type="text" placeholder="Título" required>
                 </div>
                 <div class="camposForm">
                     <label for="autor">Autor:</label>
-                    <input id="autor" name="autor" type="text" placeholder="Nombre y Apellido del autor" required>
+                    <input class= "inputForm" id="autor" name="autor" type="text" placeholder="Nombre y Apellido del autor" required>
                 </div>
                 <div class="camposForm">
                     <label for="categoria">Categoría:</label>
@@ -108,15 +115,15 @@
                 </div>
                 <div class="camposForm">
                     <label for="precio">Precio:</label>
-                    <input id="precio" name="precio" type="number" placeholder="$" required>
+                    <input class= "inputForm" id="precio" name="precio" type="number" placeholder="$" required>
                 </div>
                 <div class="camposForm">
                     <label for="stock">Stock disponible:</label>
-                    <input id="stock" name="stock" type="number" placeholder="" required>
+                    <input class= "inputForm" id="stock" name="stock" type="number" placeholder="" required>
                 </div>
                 <div class="camposForm">
                     <label for="editorial">Editorial:</label>
-                    <input id="editorial" name="editorial" type="text" placeholder="Editorial" required>
+                    <input class= "inputForm" id="editorial" name="editorial" type="text" placeholder="Editorial" required>
                 </div>
                 <div class="camposForm">
                     <label for="descripcion">Descripción:</label>
@@ -126,10 +133,8 @@
                 <input type="reset" value="REESTABLECER">
             </form>
         </aside>
-        <section id="container-btn">
-            <button id="close-session" type="button">CERRAR SESIÓN</button>
-        </section>
-        <section id="container-books">
+      
+        <section  id="container-books">
 
         </section>
     </main>
