Cambios de estilos en la página Administración

--- a/pages/administration.html
+++ b/pages/administration.html
@@ -68,6 +68,7 @@
   
         <h1 class="titlePage">Gestión de Libros</h1>
 
+        <div class="contentAdm" >
         <aside>
             <form  class="formBooks"  id="formBooks" method="post">
                 <h2>Ingreso de Libros</h2>
@@ -137,6 +138,7 @@
         <section  id="container-books">
 
         </section>
+    </div>
     </main>
       
     <footer class="footer">
